cmake_minimum_required(VERSION 3.0)
set(PROJECT_NAME bspline)
project(${PROJECT_NAME})


set(BSPLINE_ROOT "./BSpline")

set(SRC
    "${BSPLINE_ROOT}/BSplineLib.cpp"
)

set(
	BSPLINE_HEADERS
	${BSPLINE_ROOT}/BSpline.h
	${BSPLINE_ROOT}/BandedMatrix.h
	${BSPLINE_ROOT}/BSplineBase.h
	${BSPLINE_ROOT}/BSplineVersion.h 
)

add_library(${PROJECT_NAME} ${SRC})

target_include_directories(${PROJECT_NAME} PUBLIC
	$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

set_target_properties(${PROJECT_NAME} PROPERTIES 
	PUBLIC_HEADER "${BSPLINE_HEADERS}"	
	LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/Release
	LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/Debug
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/Release
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/Debug
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/Release
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/Debug
	PDB_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/Release
	PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/Debug
	COMPILE_PDB_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/bin/Release
	COMPILE_PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/bin/Debug
	OUTPUT_NAME ${PROJECT_NAME}
	ARCHIVE_OUTPUT_NAME ${PROJECT_NAME}
	RUNTIME_OUTPUT_NAME ${PROJECT_NAME}
	LIBRARY_OUTPUT_NAME ${PROJECT_NAME}
	PDB_NAME ${PROJECT_NAME}
	COMPILE_PDB_NAME ${PROJECT_NAME}
)

install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}_release
			ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/Release CONFIGURATIONS Release
			RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/Release CONFIGURATIONS Release
			LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/Release CONFIGURATIONS Release
			PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bspline CONFIGURATIONS Release)

install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}_debug
			ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/Debug CONFIGURATIONS Debug
			RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}/Debug CONFIGURATIONS Debug
			LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/Debug CONFIGURATIONS Debug
			PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bspline CONFIGURATIONS Debug)

install(EXPORT ${PROJECT_NAME}_release NAMESPACE bspline:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${CMAKE_PROJECT_NAME} FILE ${PROJECT_NAME}Config.cmake CONFIGURATIONS Release)
install(EXPORT ${PROJECT_NAME}_debug   NAMESPACE bspline:: DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${CMAKE_PROJECT_NAME} FILE ${PROJECT_NAME}Config.cmake CONFIGURATIONS Debug)

if(MSVC)
	install(FILES ${CMAKE_BINARY_DIR}/bin/Debug/${PROJECT_NAME}.pdb DESTINATION ${CMAKE_INSTALL_LIBDIR}/Debug CONFIGURATIONS Debug)
endif(MSVC)